--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 <div class="row">
   <div class="col-md-4 mb-5">
     <div class="card border-0 shadow h-100">
-      <img class="card-img-top" src="/assets/images/face.jpeg" alt="" />
+      <img class="card-img-top" src="{{ site.baseurl }}/assets/images/face.jpeg" alt="" />
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">
@@ -41,7 +41,7 @@ layout: default
   </div>
   <div class="col-md-4 mb-5">
     <div class="card border-0 shadow h-100">
-      <img class="card-img-top" src="/assets/images/medi-stuff.jpeg" alt="" />
+      <img class="card-img-top" src="{{ site.baseurl }}/assets/images/medi-stuff.jpeg" alt="" />
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">
@@ -56,7 +56,7 @@ layout: default
   </div>
   <div class="col-md-4 mb-5">
     <div class="card border-0 shadow h-100">
-      <img class="card-img-top" src="/assets/images/bottles.jpeg" alt="" />
+      <img class="card-img-top" src="{{ site.baseurl }}/assets/images/bottles.jpeg" alt="" />
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">
